--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -1,6 +1,6 @@
 template(name='skve')
     // a.ui.image.big.link.label.set_session_v(class=calculated_class)
-    .ui.circular.basic.button.set_session_v.say(class=calculated_class title=t)
+    .ui.basic.button.set_session_v.say(class=calculated_class title=t)
         // if i
         if selected 
             // +i n=i cl='ui mini inline image'
@@ -496,7 +496,7 @@ template(name='user_string_toggle')
 
 
 template(name='key_value_edit')
-    a.ui.compact.large.circular.button.set_key_value(class=set_key_value_class title=value href='#')
+    a.ui.compact.large.button.set_key_value(class=set_key_value_class title=value href='#')
         if i
             // +icon name=icon cl='ui avatar image'
             i.icon(class=i)
