--- a/parts/client/fields.jade
+++ b/parts/client/fields.jade
@@ -647,7 +647,7 @@ template(name='child_view')
         //     .ui.divider
 template(name='boolean_edit')
     //- div
-    .ui.circular.basic.button.toggle_boolean(class="#{boolean_toggle_class} #{classes}" title=tooltip)
+    .ui.basic.button.toggle_boolean(class="#{boolean_toggle_class} #{classes}" title=tooltip)
         if field_value
             i.green.checkmark.icon
         else
