--- a/parts/client/message.jade
+++ b/parts/client/message.jade
@@ -102,8 +102,8 @@
 //                 .five.wide.column
 //                     .ui.center.aligned.basic.segment
 //                         if can_submit
-//                             .ui.green.big.icon.circular.button.submit
+//                             .ui.green.big.icon.button.submit
 //                                 i.big.checkmark.icon
 //                         else 
-//                             .ui.big.green.big.icon.disabled.circular.button
+//                             .ui.big.green.big.icon.disabled.button
 //                                 i.checkmark.big.icon
