--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -7,6 +7,14 @@ template(name='nav')
             i.yin.yang.large.icon
         a.icon.item.blink.clear.mobile.hidden(href="/stats" class="{{isActiveRoute 'stats'}}")
             i.line.chart.large.icon
+        // .ui.dropdown.item
+        //     |drop
+        //     i.dropdown.icon
+        //     .menu
+        //         .item 111
+        //         .item 111
+        //         .item 111
+        //         .item 111
         a.icon.item.blink.clear(href="/love" class="{{isActiveRoute 'love'}}")
             i.heart.outline.large.icon
         a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
