--- a/parts/dao/shop.jade
+++ b/parts/dao/shop.jade
@@ -5,7 +5,7 @@ template(name='shop')
                 .ui.inline.header 
                     i.big.shop.icon
                     |shop
-                .ui.large.icon.basic.circular.button.add_item
+                .ui.large.icon.basic.button.add_item
                     i.plus.icon
                 // i.large.clock.icon
                 // i.large.thumbs.up.icon
@@ -31,10 +31,10 @@ template(name='shop')
                 div(class=main_column_class)
                     // .ui.disabled.button shared with me
                     if skv_is 'view_sidebar' false
-                        .ui.icon.compact.basic.circular.button.enable_sidebar
+                        .ui.icon.compact.basic.button.enable_sidebar
                             i.ellipsis.vertical.icon
                     else
-                        .ui.icon.compact.active.circular.button.disable_sidebar
+                        .ui.icon.compact.active.button.disable_sidebar
                             i.ellipsis.vertical.icon
                     if skv_is 'sort_direction' 1
                         .ui.icon.compact.basic.button.sort_down
@@ -65,9 +65,9 @@ template(name='shop')
                     else
                         .ui.compact.large.icon.basic.button.set_list(class=list_class)
                             i.list.icon
-                    .ui.circular.icon.basic.button.skip_left
+                    .ui.icon.basic.button.skip_left
                         i.chevron.left.icon
-                    .ui.circular.icon.basic.button.skip_right
+                    .ui.icon.basic.button.skip_right
                         i.chevron.right.icon
                     .ui.icon.button
                         i.film.icon
@@ -99,7 +99,7 @@ template(name='shop_item')
         .content
             |#{inventory} left
             if can_buy
-                .ui.circular.basic.button.buy
+                .ui.basic.button.buy
                     |buy
 
                     
@@ -108,7 +108,7 @@ template(name='shop_view')
         .ui.stackable.grid
             .row 
                 .twelve.wide.column.scrolling
-                    a.ui.circular.basic.large.icon.button(href="/shop")
+                    a.ui.basic.large.icon.button(href="/shop")
                         i.chevron.left.large.icon
                         i.large.shop.icon
                     .ui.center.aligned.inline.header #{title}
@@ -157,11 +157,11 @@ template(name='shop_view')
                             |#{unit_name}
                         else
                             |#{left}
-                    a.ui.circular.basic.large.button(href="/shop")
+                    a.ui.basic.large.button(href="/shop")
                         i.chevron.left.large.icon
                         i.large.shop.icon
                     if can_edit 
-                        a.ui.icon.large.circular.basic.button(href="/s/#{_id}/edit")
+                        a.ui.icon.large.basic.button(href="/s/#{_id}/edit")
                             i.big.pencil.icon
                     +array_edit key='tags' label='tags' direct=true
                     +link_view key='link' label='link' direct=true
@@ -190,7 +190,7 @@ template(name='shop_edit')
         .ui.stackable.grid
             .row
                 .four.wide.column.scrolling
-                    a.ui.icon.circular.green.big.button(href="/s/#{_id}" title='save')
+                    a.ui.icon.green.big.button(href="/s/#{_id}" title='save')
                         i.checkmark.big.icon
                     .ui.inline.header 
                         i.pencil.icon
