--- a/parts/food/meal_edit.jade
+++ b/parts/food/meal_edit.jade
@@ -7,7 +7,7 @@ template(name='meal_edit')
                     .ui.header editing meal
                     .ui.header #{title}
                 .four.wide.column
-                    .ui.large.circular.green.button.save_meal
+                    .ui.large.green.button.save_meal
                         i.checkmark.icon   
                         |save     
 
