--- a/parts/tribes/tribe_edit.jade
+++ b/parts/tribes/tribe_edit.jade
@@ -10,7 +10,7 @@ template(name='tribe_edit')
                             +icolor name=icon
                         |edit '#{title}' tribe
                 .four.wide.column
-                    a.ui.big.circular.basic.button(href="/tribe/#{slug}" title='save')
+                    a.ui.big.basic.button(href="/tribe/#{slug}" title='save')
                         i.green.checkmark.icon
                         |save
             .row
