--- a/client/home.jade
+++ b/client/home.jade
@@ -14,6 +14,15 @@ template(name='home')
                     i.users.icon
                     |reddit users
                     
+        .ui.simple.dropdown.item
+            |drop
+            i.dropdown.icon
+            .menu
+                .item 111
+                .item 111
+                .item 111
+                .item 111
+                    
         .eight.wide.column
             .ui.segment
                 .ui.header 
