--- a/parts/food/ingredient.jade
+++ b/parts/food/ingredient.jade
@@ -7,7 +7,7 @@ template(name='ingredient_card')
             a.ui.header(href="/ingredient/#{_id}/view") #{title}
             div created {{from_now _timestamp}} by #{_author_username}
             each tags
-                .ui.basic.circular.label #{this}
+                .ui.basic.label #{this}
             //- .ui.large.basic.label 
             //-     |#{points} points
         .content
@@ -23,14 +23,14 @@ template(name='ingredient_view')
         .ui.stackable.padded.grid
             .centered.middle.aligned.row
                 .four.wide.center.aligned.column
-                    a.ui.basic.circular.compact.button(href="/m/ingredient")
+                    a.ui.basic.compact.button(href="/m/ingredient")
                         i.left.chevron.icon
                         +icolor name='ingredients' classes='ui inline mini image'
                         |ingredients
                 .eight.wide.center.aligned.column
                     .ui.center.aligned.header #{title}
                 .four.wide.center.aligned.column
-                    a.ui.basic.circular.button(href="/ingredient/#{_id}/edit")
+                    a.ui.basic.button(href="/ingredient/#{_id}/edit")
                         i.blue.pencil.icon
                         |edit        
             .five.wide.column
@@ -75,7 +75,7 @@ template(name='ingredient_edit')
                 .eight.wide.column
                     .ui.header edit '#{title}' ingredient
                 .four.wide.column
-                    a.ui.large.circular.basic.button(href="/ingredient/#{_id}/view")
+                    a.ui.large.basic.button(href="/ingredient/#{_id}/view")
                         i.checkmark.green.icon
                         |save        
             .five.wide.column
