--- a/parts/love/love.jade
+++ b/parts/love/love.jade
@@ -28,10 +28,10 @@ template(name='love')
                 input.add_author(type='text' placeholder='...')
             
             if can_submit
-                .ui.basic.circular.button.submit
+                .ui.basic.button.submit
                     |submit
             else
-                .ui.basic.circular.button.submit
+                .ui.basic.button.submit
                     i.send.icon
                     |submit
         .sixteen.wide.center.aligned.column
@@ -40,69 +40,69 @@ template(name='love')
                     if l_results.count
                         .ui.inline.big.header l
                     each picked_l
-                        a.unpick_l.no_blink.ui.red.large.compact.basic.circular.button(href='#')
+                        a.unpick_l.no_blink.ui.red.large.compact.basic.button(href='#')
                             strong #{this}
                     each l_results
                         if name
-                            .ui.small.compact.basic.circular.button.pick_l #{name}
+                            .ui.small.compact.basic.button.pick_l #{name}
                 .center.aligned.column
                     if o_results.count
                         .ui.inline.big.header o
                     each picked_o
-                        a.unpick_o.no_blink.ui.black.large.compact.basic.circular.button(href='#')
+                        a.unpick_o.no_blink.ui.black.large.compact.basic.button(href='#')
                             strong #{this}
                     each o_results
                         if name
-                            .ui.small.compact.basic.circular.button.pick_o #{name}
+                            .ui.small.compact.basic.button.pick_o #{name}
                 .center.aligned.column
                     if v_results.count
                         .ui.inline.big.header v
                     each picked_v
-                        a.unpick_v.no_blink.ui.red.large.compact.basic.circular.button(href='#')
+                        a.unpick_v.no_blink.ui.red.large.compact.basic.button(href='#')
                             strong #{this}
                     each v_results
                         if name
-                            .ui.small.compact.basic.circular.button.pick_v #{name}
+                            .ui.small.compact.basic.button.pick_v #{name}
                 .center.aligned.column
                     if e_results.count
                         .ui.inline.big.header e
                     each picked_e
-                        a.unpick_e.no_blink.ui.red.large.compact.basic.circular.button(href='#')
+                        a.unpick_e.no_blink.ui.red.large.compact.basic.button(href='#')
                             strong #{this}
                     each e_results
                         if name
-                            .ui.small.compact.basic.circular.button.pick_e #{name}
+                            .ui.small.compact.basic.button.pick_e #{name}
         .four.wide.column.scrolling             
             if location_results.count
                 i.big.marker.icon
             each picked_locations
-                a.unpick_location.ui.red.large.compact.basic.circular.button(href='#')
+                a.unpick_location.ui.red.large.compact.basic.button(href='#')
                     strong #{this}
             each location_results
                 if name
-                    .ui.tiny.compact.basic.circular.button.pick_location #{name}
+                    .ui.tiny.compact.basic.button.pick_location #{name}
             div
             i.big.user.icon
             each picked_authors
-                a.unpick_author.ui.red.large.compact.basic.circular.button(href='#')
+                a.unpick_author.ui.red.large.compact.basic.button(href='#')
                     strong #{this}
             each author_results
                 if name
-                    .ui.tiny.compact.basic.circular.button.pick_author #{name}
+                    .ui.tiny.compact.basic.button.pick_author #{name}
             div
             i.clock.big.icon
             each picked_times
-                a.unpick_time.ui.large.large.compact.basic.circular.button(href='#')
+                a.unpick_time.ui.large.large.compact.basic.button(href='#')
                     strong #{this}
             each time_results
-                .ui.tiny.compact.basic.circular.button.pick_time #{name}
+                .ui.tiny.compact.basic.button.pick_time #{name}
             .ui.inline.header 
                 |#{love_counter}
             // i.large.clock.icon
             // i.large.thumbs.up.icon
             if picked_tags
                 // if many_tags
-                //     a#clear_tags.ui.red.invert.icon.compact.basic.circular.button.pick_term
+                //     a#clear_tags.ui.red.invert.icon.compact.basic.button.pick_term
                 //         i.remove.icon
                 each picked_tags
                     +love_unpick_tag
@@ -126,10 +126,10 @@ template(name='love')
                             +youtube_view key='youtube_id' label='youtube id' direct=true
 
                         .content 
-                            .ui.tertiary.large.basic.circular.button.pick_l #{l_value}
-                            .ui.tertiary.large.basic.circular.button.pick_o #{o_value}
-                            .ui.tertiary.large.basic.circular.button.pick_v #{v_value}
-                            .ui.tertiary.large.basic.circular.button.pick_e #{e_value}
+                            .ui.tertiary.large.basic.button.pick_l #{l_value}
+                            .ui.tertiary.large.basic.button.pick_o #{o_value}
+                            .ui.tertiary.large.basic.button.pick_v #{v_value}
+                            .ui.tertiary.large.basic.button.pick_e #{e_value}
                             div
                             i.thumbs.up.link.outline.icon.upvote
                             |#{points}
@@ -141,16 +141,16 @@ template(name='love')
                             //     input.add_tag(type='text' placeholder='+')
                             // each tags
                             //     +flat_love_tag_picker
-                                // .ui.small.compact.basic.circular.button.pick_flat_tag #{this}
+                                // .ui.small.compact.basic.button.pick_flat_tag #{this}
                             // each timestamp_tags
-                            //     .ui.small.compact.basic.circular.button.pick_flat_time #{this}
+                            //     .ui.small.compact.basic.button.pick_flat_time #{this}
                             if location
                                 i.grey.marker.icon
                                 |#{location}
                             if author
                                 i.grey.user.outline.icon
                                 |#{author}
-                            a.ui.icon.large.basic.circular.button(href="/love/#{_id}/view")
+                            a.ui.icon.large.basic.button(href="/love/#{_id}/view")
                                 |#{views}
                                 i.chevron.right.large.icon
                                     
@@ -159,7 +159,7 @@ template(name='love')
                                 
 template(name='love_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.tertiary.basic.circular.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.tertiary.basic.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -168,7 +168,7 @@ template(name='love_tag_picker')
         //     small #{count}
         
 template(name='love_unpick_tag')
-    a.love_unpick_tag.ui.large.red.compact.basic.circular.button(href='#')
+    a.love_unpick_tag.ui.large.red.compact.basic.button(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
@@ -178,7 +178,7 @@ template(name='love_unpick_tag')
         
 template(name='flat_love_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.tiny.basic.circular.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.tiny.basic.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
