--- a/parts/reddit/reddit.jade
+++ b/parts/reddit/reddit.jade
@@ -3,9 +3,9 @@ template(name='reddit')
         .twelve.wide.column
             if picked_rtags
                 // if skv_is 'nightmode' true
-                //     i.moon.circular.link.icon.toggle_nightmode
+                //     i.moon.link.icon.toggle_nightmode
                 // else
-                //     i.lightbulb.circular.link.icon.toggle_nightmode
+                //     i.lightbulb.link.icon.toggle_nightmode
                 .ui.icon.large.input
                     if is_loading
                         i.yin.yang.loading.large.icon
@@ -132,18 +132,18 @@ template(name='reddit')
                         |simple
                     // i.line.chart.icon
                 if skv_is 'reddit_view_layout' 'grid'
-                    .ui.compact.circular.large.button.set_grid(class=grid_class) 
+                    .ui.compact.large.button.set_grid(class=grid_class) 
                         i.th.large.icon
                         |grid
                 else
-                    .ui.icon.compact.circular.large.button.set_grid(class=grid_class) 
+                    .ui.icon.compact.large.button.set_grid(class=grid_class) 
                         i.th.large.icon
                 if skv_is 'reddit_view_layout' 'list'
-                    .ui.compact.circular.large.button.set_list(class=list_class)
+                    .ui.compact.large.button.set_list(class=list_class)
                         i.list.large.icon
                         |list
                 else
-                    .ui.icon.compact.circular.large.button.set_list(class=list_class)
+                    .ui.icon.compact.large.button.set_list(class=list_class)
                         i.list.large.icon
                 .ui.icon.button.skip_left
                     i.chevron.left.icon
