--- a/parts/reddit/rpost_card.jade
+++ b/parts/reddit/rpost_card.jade
@@ -20,7 +20,7 @@ template(name='rpost_card')
                 a(href=url target='_window')
                     img.ui.fluid.rounded.image.zoomer(src=data.thumbnail)    
             unless simple
-                i.circular.chevron.down.icon.dl.invert
+                i.chevron.down.icon.dl.invert
                 span.invert
                     |#{ups}
                     i.thumbs.up.outline.icon
@@ -31,7 +31,7 @@ template(name='rpost_card')
                     // .ui.basic.label #{this}
                 each five_tags
                     +flat_tag_picker
-                a.ui.icon.compact.circular.basic.button(href="https://www.reddit.com#{permalink}" target='_window' title=domain)
+                a.ui.icon.compact.basic.button(href="https://www.reddit.com#{permalink}" target='_window' title=domain)
                     // |#{domain}
                     i.external.icon
                 // div
