remove love, starting to unite tag picker template

--- a/client/home.jade
+++ b/client/home.jade
@@ -7,56 +7,56 @@ template(name='home')
                     i.search.icon
                     |reddit search
                 a.ui.big.button(href='/subs')
-                    i.reddit.circular.icon
+                    i.reddit.icon
                     |subreddits
                     
-                a.ui.big.circular.button(href='/rusers')
+                a.ui.big.button(href='/rusers')
                     i.users.icon
                     |reddit users
                     
-        .ui.simple.dropdown.item
-            |drop
-            i.dropdown.icon
-            .menu
-                .item 111
-                .item 111
-                .item 111
-                .item 111
+        // .ui.simple.dropdown.item 
+        //     |drop
+        //     i.dropdown.icon
+        //     .menu
+        //         .item 111
+        //         .item 111
+        //         .item 111
+        //         .item 111
                     
         .eight.wide.column
             .ui.segment
                 .ui.header 
                     i.stack.exchange.icon
                     |Stack Exchange
-                a.ui.big.circular.button(href='/stack')
+                a.ui.big.button(href='/stack')
                     i.stack.exchange.icon
                     |stack exchange sites
-                a.ui.big.circular.button(href='/susers')
+                a.ui.big.button(href='/susers')
                     i.stack.exchange.icon
                     |stack exchange users
             
-            a.ui.big.circular.button(href="/food")
+            a.ui.big.button(href="/food")
                 i.food.icon
                 |food     
-            a.ui.big.circular.button(href="/tribes")
+            a.ui.big.button(href="/tribes")
                 i.fire.icon
                 |tribes     
-            a.ui.big.circular.button(href="/tribes")
+            a.ui.big.button(href="/tribes")
                 i.clock.icon
                 |rentals     
-            a.ui.big.circular.button(href="/tribes")
+            a.ui.big.button(href="/tribes")
                 i.shop.icon
                 |products     
-            a.ui.big.circular.button(href="/tribes")
+            a.ui.big.button(href="/tribes")
                 i.shop.icon
                 |services     
-            a.ui.big.circular.button(href="/school")
+            a.ui.big.button(href="/school")
                 i.university.icon
                 |facet university     
-            a.ui.big.circular.button(href="/notecards")
+            a.ui.big.button(href="/notecards")
                 i.clone.icon
                 |notecards     
-            a.ui.big.circular.button(href="/love")
+            a.ui.big.button(href="/love")
                 i.heart.icon
                 |love     
             .ui.segment
