--- a/parts/reddit/reddit.jade
+++ b/parts/reddit/reddit.jade
@@ -1,7 +1,7 @@
 template(name='reddit')
     .ui.stackable.padded.grid
         .twelve.wide.column
-            if picked_rtags
+            if picked_tags
                 // if skv_is 'nightmode' true
                 //     i.moon.link.icon.toggle_nightmode
                 // else
@@ -13,11 +13,11 @@ template(name='reddit')
                         i.search.icon
                     input.search_tag(type='text' value=query autofocus='' placeholder="#{post_counter} results")
                     // .ui.label #{this}
-            if picked_rtags
+            if picked_tags
                 // if many_tags
                 //     a#clear_tags.ui.red.invert.icon.button.pick_term
                 //         i.remove.icon
-                each picked_rtags
+                each picked_tags
                     +unpick_tag
                 each result_rtags
                     // .ui.label #{this}
@@ -26,7 +26,7 @@ template(name='reddit')
                 .ui.center.aligned.basic.segment
                     .ui.icon.big.input
                         i.search.large.icon
-                        input.search_tag(type='text' placeholder='search' autofocus='')
+                        input.search_tag(type='text' placeholder='reddit search' autofocus='')
                         // .ui.label #{this}
                     +search_shortcut tag='math' icon='calculator'
                     +search_shortcut tag='camping' icon='campground'
@@ -87,7 +87,7 @@ template(name='reddit')
                 // .ui.label #{this}
                 +tag_picker
                 // .ui.large.label(title=count) #{name}
-            if picked_rtags
+            if picked_tags
                 div
                 .ui.inline.header #{post_count}
                 if skv_is 'sort_direction' 1
@@ -151,7 +151,7 @@ template(name='reddit')
                     i.chevron.right.icon
             if skv_is 'view_sidebar' true
                 +reddit_leftbar
-        if picked_rtags
+        if picked_tags
             .ui.twelve.wide.column                
                 .scrolling
                     if rposts
