--- a/parts/stack/client/site.jade
+++ b/parts/stack/client/site.jade
@@ -71,7 +71,7 @@ template(name='sq')
                     //     i.th.icon
                     // .ui.icon.compact.large.button 
                     //     i.list.icon
-                    .medscroll
+                    .medscrol
                         each site_questions
                             +s_q_item
                             .ui.divider
