remove food, schoo, and tribes

--- a/client/home.jade
+++ b/client/home.jade
@@ -1,5 +1,5 @@
 template(name='home')
-    .ui.stackable.padded.grid
+    .ui.stackable.grid
         .eight.wide.column
             .ui.segment
                 .ui.header Reddit
