remove user_credits, user_sent, users, shop, group, bounty

--- a/parts/stack/client/stack.jade
+++ b/parts/stack/client/stack.jade
@@ -21,7 +21,7 @@ template(name='stack')
                     +skve k='sort_key' v='total_answers' l='a' i='reply'
                     +skve k='sort_key' v='total_questions' l='q' i='question'
                     +skve k='sort_direction' v=-1 i='chevron up'
-                    +skve gm bk='sort_direction' v=1 i='chevron down'
+                    +skve k='sort_direction' v=1 i='chevron down'
             // .four.wide.column
             //     .ui.header stack docs
             .sixteen.wide.column.scrollin
